--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">WEBSTUDIO</a>
         <nav>
-                <a href="">Studio</a>
-                <a href="">Portfolio</a>
-                <a href="">Contacts</a>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
         </nav>
         <address>
             <ul>
@@ -72,7 +74,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>&copy; Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
