--- a/index.html
+++ b/index.html
@@ -31,43 +31,53 @@
 
      </section>
         <section>
-            <div class="Strategy">
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.</p>
-            </div>
-            <div class="Punctuality">
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </div>
-            <div class="Diligence">
-                <h3>Diligence</h3>
-                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-            </div>
-            <div class="Technologies">
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </div>
+            <ul>
+                <li>
+                    <div class="Strategy">
+                        <h3>Strategy</h3>
+                        <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="Punctuality">
+                        <h3>Punctuality</h3>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="Diligence">
+                        <h3>Diligence</h3>
+                        <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="Technologies">
+                        <h3>Technologies</h3>
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </div>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Our Team</h2>
             <div class="team-member">
-                <img src="images/img.jpg" alt="Mark Guerrero" width="264" height="260">
+                <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </div>
             <div class="team-member">
-                <img src="images/img1.jpg" alt="Tom Ford" width="264" height="260">
+                <img src="./images/img1.jpg" alt="Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </div>
             <div class="team-member">
-                <img src="images/img2.jpg" alt="Camila Garcia" width="264" height="260">
+                <img src="./images/img2.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </div>
             <div class="team-member">
-                <img src="images/img3.jpg" alt="Daniel Wilson" width="264" height="260">
+                <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </div>
