--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
      </section>
         <section>
+            <h2 hidden>Our Approach</h2>
             <ul>
                 <li>
                     <div class="Strategy">
                         <h3>Strategy</h3>
-                        <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </div>
                 </li>
                 <li>
