--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </li>
             </ul>
         </section>
+        <section>
         <h2>Our Team</h2>
         <ul>
             <li>
